<resources>
    <string name="app_name">MTL_Clothes</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="geeta">Geeta.</string>
    <string name="create_your_fashion_in_your_own_way">Create your fashion in your own way</string>
    <string name="each_men_and_women_has_their_own_style_geeta_help_you_to_create_your_unique_style">Each men and women has their own style, Geeta help you to create your unique style.</string>
    <string name="log_in">LOG IN</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="yay_you_re_back_thanks_for_shopping_with_us_we_have_excited_deals_and_promotions_going_on_grab_your_pick_now">Yay! You\'re back! Thanks for shopping with us. We have excited deals and promotions going on, grab your pick now!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="get_s_started_with_geeta">Get’s started with Geeta.</string>
    <string name="log_in_normal"><u>Log in</u></string>
    <string name="by_joining_i_agree_to_receive_emails_from_geeta">By joining I agree to receive emails from Geeta.</string>
    <string name="your_name">Your name</string>
    <string name="orders">Orders</string>
    <string name="log_out">LOG OUT</string>
    <string name="filter_sort"><![CDATA[Filter & Sort]]></string>
    <string name="description">DESCRIPTION</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book...detail</string>
    <string name="select_size">SELECT SIZE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="my_cart">My Cart</string>
    <string name="go_to_checkout">GO TO CHECKOUT</string>
    <string name="address">Address</string>
    <string name="select_address">Select Address</string>
    <string name="remine_me_later">Remine me later</string>
    <string name="promo_code">Promo Code</string>
    <string name="pick_discount">Pick discount</string>
    <string name="total_cost">Total Cost</string>
    <string name="txt_content">By placing an order you agree to our Terms And Conditions.</string>
    <string name="place_order">place order</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_city">Shipping City</string>
    <string name="telephone_number">Telephone number</string>
    <string name="discount_code">Discount Code</string>
    <string name="save_information">Save Information</string>
    <string name="please_input_all_information_before_save_information">Please input all information before save information</string>
    <string name="your_items_has_been_placed_and_is_on_it_s_way_to_being_process">Your items has been placed and is on it\'s way to being process</string>
    <string name="track_order">TRACK ORDER</string>
    <string name="continue_shopping">continue shopping</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="promo_card">Promo card</string>
    <string name="order_details">Order Details</string>
    <string name="api_key">AIzaSyDldpbwyRoY5KqQ3A95zirE9qgHuPhtLiM</string>
</resources>