<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SucessActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_success"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintTop_toBottomOf="@+id/iv_back"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_success" />

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="Congrats! Your Order has been placed"
        android:textColor="#181725"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/anim_success" />

    <TextView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_items_has_been_placed_and_is_on_it_s_way_to_being_process"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/lato_regular"
        android:textSize="12sp"
        android:textColor="#A1A1A1"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats" />

    <Button
        android:id="@+id/btn_track_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_black"
        android:paddingVertical="20dp"
        android:text="@string/track_order"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="#6342E8"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue" />
    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:text="@string/continue_shopping"
        android:backgroundTint="#6342E8"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/tv_back_to_home"
        />

    <TextView
        android:id="@+id/tv_back_to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:text="Back To Home"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>